; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao.c_ao_hotplug_destroy.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao.c_ao_hotplug_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ao_hotplug = type { %struct.ao_hotplug*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.ao_hotplug*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ao_hotplug_destroy(%struct.ao_hotplug* %0) #0 {
  %2 = alloca %struct.ao_hotplug*, align 8
  store %struct.ao_hotplug* %0, %struct.ao_hotplug** %2, align 8
  %3 = load %struct.ao_hotplug*, %struct.ao_hotplug** %2, align 8
  %4 = icmp ne %struct.ao_hotplug* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %39

6:                                                ; preds = %1
  %7 = load %struct.ao_hotplug*, %struct.ao_hotplug** %2, align 8
  %8 = getelementptr inbounds %struct.ao_hotplug, %struct.ao_hotplug* %7, i32 0, i32 0
  %9 = load %struct.ao_hotplug*, %struct.ao_hotplug** %8, align 8
  %10 = icmp ne %struct.ao_hotplug* %9, null
  br i1 %10, label %11, label %32

11:                                               ; preds = %6
  %12 = load %struct.ao_hotplug*, %struct.ao_hotplug** %2, align 8
  %13 = getelementptr inbounds %struct.ao_hotplug, %struct.ao_hotplug* %12, i32 0, i32 0
  %14 = load %struct.ao_hotplug*, %struct.ao_hotplug** %13, align 8
  %15 = getelementptr inbounds %struct.ao_hotplug, %struct.ao_hotplug* %14, i32 0, i32 1
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32 (%struct.ao_hotplug*)*, i32 (%struct.ao_hotplug*)** %17, align 8
  %19 = icmp ne i32 (%struct.ao_hotplug*)* %18, null
  br i1 %19, label %20, label %32

20:                                               ; preds = %11
  %21 = load %struct.ao_hotplug*, %struct.ao_hotplug** %2, align 8
  %22 = getelementptr inbounds %struct.ao_hotplug, %struct.ao_hotplug* %21, i32 0, i32 0
  %23 = load %struct.ao_hotplug*, %struct.ao_hotplug** %22, align 8
  %24 = getelementptr inbounds %struct.ao_hotplug, %struct.ao_hotplug* %23, i32 0, i32 1
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32 (%struct.ao_hotplug*)*, i32 (%struct.ao_hotplug*)** %26, align 8
  %28 = load %struct.ao_hotplug*, %struct.ao_hotplug** %2, align 8
  %29 = getelementptr inbounds %struct.ao_hotplug, %struct.ao_hotplug* %28, i32 0, i32 0
  %30 = load %struct.ao_hotplug*, %struct.ao_hotplug** %29, align 8
  %31 = call i32 %27(%struct.ao_hotplug* %30)
  br label %32

32:                                               ; preds = %20, %11, %6
  %33 = load %struct.ao_hotplug*, %struct.ao_hotplug** %2, align 8
  %34 = getelementptr inbounds %struct.ao_hotplug, %struct.ao_hotplug* %33, i32 0, i32 0
  %35 = load %struct.ao_hotplug*, %struct.ao_hotplug** %34, align 8
  %36 = call i32 @talloc_free(%struct.ao_hotplug* %35)
  %37 = load %struct.ao_hotplug*, %struct.ao_hotplug** %2, align 8
  %38 = call i32 @talloc_free(%struct.ao_hotplug* %37)
  br label %39

39:                                               ; preds = %32, %5
  ret void
}

declare dso_local i32 @talloc_free(%struct.ao_hotplug*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
